[package]
name = "kanban"
version = "0.1.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
serde = { version = "1.0.127", features = ["derive"] }
terminus_types = { path = "../terminus_types" }
tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util", "time"] }
tokio-rustls = "0.22.0"
tui = "0.16.0"
log = "0.4.14"
log-panics = "2.0.0"
anyhow = "1.0.42"
simplelog = "0.10.0"
sled = "0.34.6"
toml = "0.5.8"
termion = "1.5.6"
crossbeam-channel = "0.5.1"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.8"
crossbeam-utils = "0.8.5"
rand = "0.8.4"
blake3 = "1.0.0"
dirs = "3.0.2"
signal-hook = "0.3.9"
libc = "0.2.98"
