[package]
name = "terminus-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bincode = "1.3.3"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
log = "0.4.14"
log-panics = "2.0.0"
once_cell = "1.8.0"
serde = { version = "1.0.127", features = ["derive"] }
simplelog = "0.10.0"
sled = "0.34.6"
terminus_types = { path = "../terminus_types" }
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util", "time"] }
